--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
     <div class="container">
       <h1>Random Password Generator</h1>
       <input type="text" id="password" readonly placeholder="Generated Password">
+      
+      <div>
+        <label for="length">Password Length: <span id="lengthValue">12</span></label>
+        <input type="range" id="length" min="6" max="20" value="12" step="1">
+      </div>
+
       <div class="buttons">
         <button onclick="generatePassword()">Generate Password</button>
         <button onclick="copyPassword()">Copy to Clipboard</button>
       </div>
     </div>
   </div>
-  
+
   <script src="script.js"></script>
 </body>
 </html>
